# ReadyToUse

./: .gitignore  .numba_config.yaml  README.md  check_llvm.py  config.py  main.py  pyproject.toml  requirements.txt  script.lua  setup.cfg  setup.py  test-new-faster.ps1  test-new.ps1  test-old.ps1  wrk-new-faster.md  wrk-new.md  wrk-old.md  Задачка.txt
app/: _assign_abc.pyx  analytics.py  auth.py  main.py  userid.py
routes/: AuthAPI.py  GetItemAnalytics.py  LogPas.txt  UserId.py  sales_dump.json  stock_dump.json
tests/: test_auth_token.py  test_endpoints.py
